# spatial_brain_maps

./: .gitignore  README.md  build_metrics.py  creating_3d_volumes.py  index.html  pyproject.toml  script.js  setup.py  style.css
.github/workflows/: deploy-pages.yml  publish.yml
data/: structure_names.json.gzip
examples/: README.md  creating_3d_volumes.py  plot_with_brainglobe.py
paper_figures/: README.md
paper_figures/figure_1_validation/: 1_quantify_error.py  2_analysis_plotting.py  analysis_plotting.py  quantify_error.py  standardise_orientation.py  utilities.py
paper_figures/figure_1_validation/datafiles/: consolidated_registration_results.csv  registration_results.csv
paper_figures/figure_1_validation/misc/: affine_components.py  affine_to_aling_demo.py  utilities.py  (+5 more)
paper_figures/figure_2_comparison/: 1_download_allen_volumes.py  2_create_volume_outline_plots.py  allen_volumes.py  create_volume_outline_plots.py
paper_figures/figure_3_careas/: 1_create_pca.py  2_create_clustered_atlas.py  3_create_unique_colour_plots_ccfv3bbp.py  4_create_unique_colour_plots_carea_atlas.py  cluster_atlas.py  colour_CAreas.py  create_atlas_cuts.py  create_pca.py
spatial_brain_maps/: main.py  points.py  volume.py
spatial_brain_maps/metadata/: add_pixel_size_information.py  compile_metadata.py  create_filtered_ISH.py  filtered_ISH_pixel_size.csv  metadata.csv  metadata_exp_removed.csv  remove_wrongly_indexed.py
spatial_brain_maps/utilities/: alignment_functions.py  path_utils.py
spatial_brain_maps_web/: README.md  build_metrics.py  fetch_synonyms.py  index.html
(+3864 files in other folders)
