[build-system]
requires = [
  "setuptools>=61",
  "setuptools-scm>=8",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Write the version into the package at build time
write_to = "spatial_brain_maps/_version.py"

[project]
name = "spatial_brain_maps"
# Version provided dynamically by setuptools-scm
description = "Spatial brain maps: reconstruct 3D mouse brain gene expression volumes and point clouds"
readme = "README.md"
authors = [ { name = "Neural Systems @ UiO", email = "harry.carey@medisin.uio.no" } ]
license = { text = "MIT" }
requires-python = ">=3.8"
dynamic = ["version"]
keywords = ["neuroscience", "brain", "gene expression", "allen brain atlas", "neuroinformatics"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "pandas",
  "pynutil",
  "opencv-python",
  "numpy",
  "matplotlib",
  "tqdm",
  "pynrrd",
  "scipy",
  "nibabel"
]

[project.scripts]
spatial_brain_maps = "spatial_brain_maps.main:main"
